[gd_scene load_steps=2 format=3 uid="uid://bvr1j5u8lxhvw"]

[ext_resource type="Script" path="res://assets/Prefab_kinda/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MusicHeader" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MusicContainer/MusicHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Music:"
vertical_alignment = 1

[node name="MusicToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/MusicContainer/MusicHeader"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
button_pressed = true

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SFXHeader" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SFXContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SFXContainer/SFXHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Sound effects:"
vertical_alignment = 1

[node name="SFXToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/SFXContainer/SFXHeader"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
button_pressed = true

[node name="SFXSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HelpButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Help"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="HelpPopup" type="AcceptDialog" parent="."]
title = "Game Instructions"
initial_position = 2
size = Vector2i(500, 400)
dialog_text = "=== GAME CONTROLS ===

MOVEMENT:
• Arrow Keys / WASD - Move Left/Right
• Space - Jump
• Space (in air) - Wall Jump

GAMEPLAY:
• Avoid spikes and hazards
• Reach the end of each level
• Wall jump to climb towers
• Manage your stamina bar

ENEMIES:
• Worker Ants - Patrol and chase player
• Stay away from their path or jump over them

TIPS:
• Use wall jumps to reach high places
• Watch your stamina when wall jumping
• Time your jumps carefully around enemies
• Spikes are deadly - avoid at all costs!

Press ESC to pause the game at any time.

Good luck!"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonsContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
